--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -21,3 +21,4 @@ obj-$(CONFIG_MSM_CPU_FREQ_SCREEN) += cpufreq.o
 obj-$(CONFIG_MACH_TROUT) += board-dream.o
 obj-$(CONFIG_MACH_HALIBUT) += board-halibut.o board-halibut-keypad.o
 obj-$(CONFIG_MACH_TROUT) += htc_akm_cal.o htc_wifi_nvs.o htc_acoustic.o
+obj-$(CONFIG_TROUT_H2W) += board-trout-h2w.o
