[ARM] msm: trout: Switch to new headset driver in trout
Signed-off-by: San Mehat <san@android.com>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -63,7 +63,7 @@ config MACH_TROUT
 	help
 	  Support for the HTC Dream, T-Mobile G1, Android ADP1 devices.
 
-config TROUT_H2W
+config HTC_HEADSET
 	tristate "HTC 2 Wire detection driver"
 	default n
 	help
