--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -63,6 +63,11 @@ config MACH_TROUT
 	help
 	  Support for the HTC Dream, T-Mobile G1, Android ADP1 devices.
 
+config MACH_SAPPHIRE
+	depends on ARCH_MSM
+	default y
+	bool "Sapphire"
+
 config HTC_HEADSET
 	tristate "HTC 2 Wire detection driver"
 	default n
