--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -146,6 +146,14 @@ config MACH_QSD8X50_GRAPEFRUIT
 	help
 	  Support for the Qualcomm Grapefruit eval board.
 
+config MACH_QSD8X50_ST1
+	depends on ARCH_QSD8X50
+	depends on MSM_STACKED_MEMORY
+	default n
+	bool "QSD8x50 ST1"
+	help
+	  Support for the Qualcomm ST1.
+
 endmenu
 
 config MSM_STACKED_MEMORY
