--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -354,7 +354,7 @@ choice
 endchoice
 
 config MSM_N_WAY_SMD
-	depends on (MSM_SMD && (ARCH_QSD || MACH_MSM7X27_SURF || MACH_MSM7X27_FFA))
+	depends on (MSM_SMD && (ARCH_MSM_SCORPION || ARCH_MSM7X27))
 	default y
 	bool "MSM N-WAY SMD support"
 	help
