Update QSD base kconfig.

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -546,10 +546,9 @@ config MSM_SLEEP_TIME_OVERRIDE
 
 config QSD_BASE_24000000
 	bool "Base memory at 0x24000000"
-	depends on ARCH_QSD
+	depends on ARCH_MSM_SCORPION
 	default n
 	help
 	  Select if physical DRAM at 0x24000000
-
 
 endif
